--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -25,7 +26,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdk 31
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,12 +43,21 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 23
     }
 
     dependencies {
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
         testImplementation 'org.mockito:mockito-core:5.0.0'
+
+        implementation "com.github.komputing.kethereum:model:0.85.7"
+        implementation "com.github.komputing.kethereum:extensions_kotlin:0.85.7"
+        implementation "com.github.komputing.kethereum:bip39:0.85.7"
+        implementation 'com.github.komputing.kethereum:bip39_wordlist_en:0.85.7'
+        implementation "com.github.komputing.kethereum:bip32:0.85.7"
+        implementation "com.github.komputing.kethereum:crypto_impl_spongycastle:0.85.7"
+        implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
+        implementation 'com.google.android.gms:play-services-auth-blockstore:16.2.0'
     }
 
     testOptions {
