added functions for mnenomic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
         package: com.savez.flutter_sdk
         pluginClass: FlutterSdkPlugin
       ios:
+        package: com.savez.flutter_sdk
         pluginClass: FlutterSdkPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
